--- a/ui/identification_edit_window.ui
+++ b/ui/identification_edit_window.ui
@@ -6,9 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
+    <width>620</width>
     <height>500</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>LM Sans 12</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Identification</string>
@@ -18,6 +23,11 @@
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="dateLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Date</string>
        </property>
@@ -28,19 +38,24 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="cityLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Commune</string>
        </property>
@@ -51,19 +66,32 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="departmentLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Département</string>
        </property>
@@ -74,19 +102,27 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="countryLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Pays</string>
        </property>
@@ -97,19 +133,27 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="latitudeLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Latitude (°)</string>
        </property>
@@ -120,19 +164,27 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
      <item row="5" column="0">
       <widget class="QLabel" name="longitudeLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Longitude (°)</string>
        </property>
@@ -143,19 +195,27 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
      <item row="6" column="0">
       <widget class="QLabel" name="altitudeLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Altitude (m)</string>
        </property>
@@ -166,19 +226,27 @@
        <property name="minimumSize">
         <size>
          <width>300</width>
-         <height>30</height>
+         <height>35</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>30</height>
+         <height>35</height>
         </size>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
      <item row="7" column="0">
       <widget class="QLabel" name="descriptionLabel">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="text">
         <string>Description terrain</string>
        </property>
@@ -198,10 +266,18 @@
          <height>150</height>
         </size>
        </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
+       </property>
       </widget>
      </item>
      <item row="8" column="0" colspan="2">
       <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
