--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -7,8 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>1580</width>
-    <height>653</height>
+    <height>725</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>LM Sans 12</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -32,7 +37,7 @@
          </size>
         </property>
         <property name="title">
-         <string>Recherche</string>
+         <string>RECHERCHE</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -45,8 +50,14 @@
            </property>
            <item row="0" column="0">
             <widget class="QLabel" name="searchTitlelabel">
+             <property name="font">
+              <font>
+               <family>LM Sans 12</family>
+               <bold>true</bold>
+              </font>
+             </property>
              <property name="text">
-              <string>Nom d'espèce</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#c01c28;&quot;&gt;Nom d'espèce&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
@@ -74,8 +85,14 @@
             <height>16777215</height>
            </size>
           </property>
+          <property name="font">
+           <font>
+            <family>LM Sans 12</family>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="title">
-           <string>Classification</string>
+           <string>CLASSIFICATION</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -186,8 +203,14 @@
             <height>16777215</height>
            </size>
           </property>
+          <property name="font">
+           <font>
+            <family>LM Sans 12</family>
+            <italic>false</italic>
+           </font>
+          </property>
           <property name="title">
-           <string>Espèce</string>
+           <string>ESPÈCE</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -197,6 +220,13 @@
             <layout class="QGridLayout" name="gridLayout_15">
              <item row="0" column="0">
               <widget class="QGroupBox" name="speciesNameGroupBox">
+               <property name="font">
+                <font>
+                 <family>LM Sans 12</family>
+                 <italic>false</italic>
+                 <bold>false</bold>
+                </font>
+               </property>
                <property name="title">
                 <string>Nomenclature</string>
                </property>
@@ -206,7 +236,7 @@
                   <item row="0" column="0">
                    <widget class="QLabel" name="speciesLatinNameLabel">
                     <property name="text">
-                     <string>Nom Latin</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#26a269;&quot;&gt;Nom Latin&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -223,7 +253,7 @@
                   <item row="1" column="0">
                    <widget class="QLabel" name="speciesCommonNameLabel">
                     <property name="text">
-                     <string>Nom Commun</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#26a269;&quot;&gt;Nom Commun&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -269,7 +299,7 @@
                   <item row="0" column="0">
                    <widget class="QLabel" name="speciedEdibilityLabel">
                     <property name="text">
-                     <string>Comestibilité</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#e5a50a;&quot;&gt;Comestibilité&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -315,7 +345,7 @@
                   <item row="2" column="0">
                    <widget class="QLabel" name="speciesRefFlorePyreneesLabel">
                     <property name="text">
-                     <string>Guide Flore des Pyrénées</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#3584e4;&quot;&gt;Guide Flore des Pyrénées&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -342,21 +372,21 @@
                   <item row="0" column="0">
                    <widget class="QLabel" name="speciesRefDelachauxFleursLabel">
                     <property name="text">
-                     <string>Guide Delachaux des Fleurs</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#3584e4;&quot;&gt;Guide Delachaux des Fleurs&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
                   <item row="3" column="0">
                    <widget class="QLabel" name="speciesRefDelachauxArbresLabel">
                     <property name="text">
-                     <string>Guide Delachaux des Arbres</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#3584e4;&quot;&gt;Guide Delachaux des Arbres&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
                   <item row="4" column="0">
                    <widget class="QLabel" name="speciesRefChampignonsLabel">
                     <property name="text">
-                     <string>Guide des Champignons</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#3584e4;&quot;&gt;Guide des Champignons&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -383,7 +413,7 @@
                   <item row="1" column="0">
                    <widget class="QLabel" name="speciesRefGuide700PlantesLabel">
                     <property name="text">
-                     <string>Guide 700 Plantes</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#3584e4;&quot;&gt;Guide 700 Plantes&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -419,7 +449,7 @@
            </size>
           </property>
           <property name="title">
-           <string>Identifications</string>
+           <string>IDENTIFICATIONS</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -436,6 +466,11 @@
              </item>
              <item row="3" column="0">
               <widget class="QGroupBox" name="identificationInfosGroupBox">
+               <property name="font">
+                <font>
+                 <family>LM Sans 12</family>
+                </font>
+               </property>
                <property name="title">
                 <string>Infos</string>
                </property>
@@ -445,14 +480,14 @@
                   <item row="3" column="0">
                    <widget class="QLabel" name="identificationGpsLabel">
                     <property name="text">
-                     <string>Coordonnées GPS</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#9141ac;&quot;&gt;Coordonnées GPS&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
                   <item row="0" column="0">
                    <widget class="QLabel" name="identificationCityLabel">
                     <property name="text">
-                     <string>Commune</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#9141ac;&quot;&gt;Commune&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -469,7 +504,7 @@
                   <item row="2" column="0">
                    <widget class="QLabel" name="identificationCountryLabel">
                     <property name="text">
-                     <string>Pays</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#9141ac;&quot;&gt;Pays&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -496,7 +531,7 @@
                   <item row="1" column="0">
                    <widget class="QLabel" name="identificationDepartmentLabel">
                     <property name="text">
-                     <string>Département</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#9141ac;&quot;&gt;Département&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -516,7 +551,7 @@
                   <item row="4" column="0">
                    <widget class="QLabel" name="identificationDescriptionLabel">
                     <property name="text">
-                     <string>Description terrain</string>
+                     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#9141ac;&quot;&gt;Description terrain&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                     </property>
                    </widget>
                   </item>
@@ -553,6 +588,11 @@
              </item>
              <item row="1" column="0">
               <widget class="QGroupBox" name="identificationListGroupBox">
+               <property name="font">
+                <font>
+                 <family>LM Sans 12</family>
+                </font>
+               </property>
                <property name="title">
                 <string>Liste</string>
                </property>
@@ -614,6 +654,11 @@
              </item>
              <item row="2" column="0">
               <widget class="QGroupBox" name="identificationPhotosGroupBox">
+               <property name="font">
+                <font>
+                 <family>LM Sans 12</family>
+                </font>
+               </property>
                <property name="title">
                 <string>Photos</string>
                </property>
