--- a/ui/species_edit_window.ui
+++ b/ui/species_edit_window.ui
@@ -7,8 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>450</height>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>LM Sans 12</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Espèce</string>
@@ -25,6 +30,11 @@
            <width>200</width>
            <height>0</height>
           </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
          </property>
          <property name="text">
           <string>Dossier</string>
@@ -45,6 +55,11 @@
            <height>90</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -55,6 +70,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="explorerPushButton">
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Parcourir</string>
          </property>
@@ -72,6 +92,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Nom latin</string>
          </property>
@@ -82,14 +107,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
         </widget>
        </item>
@@ -101,6 +129,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Nom commun</string>
          </property>
@@ -111,14 +144,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
         </widget>
        </item>
@@ -130,6 +166,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Comestibilité</string>
          </property>
@@ -140,14 +181,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
         </widget>
        </item>
@@ -159,6 +203,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Guide Delachaux des Fleurs</string>
          </property>
@@ -169,14 +218,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="documentTitle">
           <string/>
@@ -191,6 +243,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Guide 700 Plantes</string>
          </property>
@@ -201,14 +258,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="documentTitle">
           <string/>
@@ -223,6 +283,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Guide Flore des Pyrénées</string>
          </property>
@@ -233,14 +298,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="documentTitle">
           <string/>
@@ -255,6 +323,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Guide Delachaux des Arbres</string>
          </property>
@@ -265,14 +338,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="documentTitle">
           <string/>
@@ -287,6 +363,11 @@
            <height>0</height>
           </size>
          </property>
+         <property name="font">
+          <font>
+           <family>LM Sans 12</family>
+          </font>
+         </property>
          <property name="text">
           <string>Guide des Champignons</string>
          </property>
@@ -297,14 +378,17 @@
          <property name="minimumSize">
           <size>
            <width>300</width>
-           <height>30</height>
+           <height>35</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>30</height>
+           <height>35</height>
           </size>
+         </property>
+         <property name="cursor" stdset="0">
+          <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="documentTitle">
           <string/>
@@ -315,6 +399,11 @@
      </item>
      <item>
       <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="font">
+        <font>
+         <family>LM Sans 12</family>
+        </font>
+       </property>
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
